--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ University of Michigan<br />
 
 <h2>About Me</h2>
 
-<p>I am a computer science undergraduate researcher and student advised by <a href="https://web.eecs.umich.edu/~weimerw/">Westley Weimer</a> at the University of Michigan. I was a 2022 Software Engineer Intern at Facebook (Now Meta). Prior to that, I was a Software Research Intern at <a href="https://s3d.cmu.edu/">Carnegie Mellon University's Software and Societal Systems Department </a> through the National Science Foundation sponsored <a href="https://www.cmu.edu/scs/s3d/reuse/">REUSE program</a>. While completing research at Carnegie Mellon University, I was advised by <a href="https://www.cylab.cmu.edu/directory/bios/kang-eunsuk.html">Eunsuk Kang</a></p>
+<p>I am a computer science undergraduate student and researcher, advised by <a href="https://web.eecs.umich.edu/~weimerw/">Westley Weimer</a> at the University of Michigan. My current research focus is in CS pedagogy and the cognition of computer programming. I'm also an Instructional Aide (IA) for EECS 203: Discrete Mathematics at UM. In early 2023, I was a student researcher in mathematics with the <a href="https://lsa.umich.edu/math/undergraduates/research-and-career-opportunities/LoGM.html">Lab of Geometry at Michigan, LoG(M)</a>, where I studied the simulation of fractional Brownian motions and under the mentorship of Dr. Hai Le. I was a 2022 Software Engineer Intern at Facebook (now Meta) working on mechanisms to protect user data with the AI Security team. Prior to that, I was a Software Engineering Research Intern at Carnegie Mellon University's <a href="https://s3d.cmu.edu/">Software and Societal Systems Department (S3D) </a>, through the NSF-sponsored <a href="https://www.cmu.edu/scs/s3d/reuse/">REUSE program</a>. While there, I conducted research on how to generate control logic from formal specifications of safety-critical cyber-physical systems, advised by <a href="https://www.cylab.cmu.edu/directory/bios/kang-eunsuk.html">Eunsuk Kang</a>.</p>
 
 <br>
 <br>
@@ -33,7 +33,7 @@ University of Michigan<br />
 <p><b><i>Currently, I am applying to Computer Science PhD programs starting in Fall 2024!</i></b></p>
 
 
-<p>I plan to conduct research on topics that creatively leverage the mathematical foundations of computer science to improve real-world software such as Formal Methods, Formal Verification, and Algorithms and Complexity Theory.</p>
+<p>I plan to conduct research that improves real-world software by finding creative new ways to leverage the mathematical foundations of computer science. I'm particularly interested in the potential to combine Data-Driven and Formal Methods-based strategies, such as in the areas of Automated Program Synthesis, Analysis, Repair, Testing, and Verification.</p>
 
 <hr>
 
@@ -188,7 +188,7 @@ University of Michigan<br />
 
 <hr>
 
-<p class="author">Reach me through <a href="mailto:EMSHEDDE@umich.edu">email</a> or <a href="">GitHub</a>!</p>
+<p class="author">Reach me through <a href="mailto:EMSHEDDE@umich.edu">email</a> or <a href="https://github.com/EmmaShedden">GitHub</a>!</p>
 
 </body>
 </html>
