--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@ University of Michigan<br />
 
 <h2>About Me</h2>
 
-<p>I am a computer science undergraduate student and researcher, advised by <a href="https://web.eecs.umich.edu/~weimerw/">Westley Weimer</a> at the University of Michigan. My current research focus is in CS pedagogy and the cognition of computer programming. I'm also an Instructional Aide (IA) for EECS 203: Discrete Mathematics at UM. In early 2023, I was a student researcher in mathematics with the <a href="https://lsa.umich.edu/math/undergraduates/research-and-career-opportunities/LoGM.html">Lab of Geometry at Michigan, LoG(M)</a>, where I studied the simulation of fractional Brownian motions and under the mentorship of Dr. Hai Le. I was a 2022 Software Engineer Intern at Facebook (now Meta) working on mechanisms to protect user data with the AI Security team. Prior to that, I was a Software Engineering Research Intern at Carnegie Mellon University's <a href="https://s3d.cmu.edu/">Software and Societal Systems Department (S3D) </a>, through the NSF-sponsored <a href="https://www.cmu.edu/scs/s3d/reuse/">REUSE program</a>. While there, I conducted research on how to generate control logic from formal specifications of safety-critical cyber-physical systems, advised by <a href="https://www.cylab.cmu.edu/directory/bios/kang-eunsuk.html">Eunsuk Kang</a>.</p>
+<p>I am a computer science undergraduate researcher and student, advised by <a href="https://web.eecs.umich.edu/~weimerw/">Wes Weimer</a> at the University of Michigan. My current research focus is in CS pedagogy and the cognition of computer programming.</p>
+
+<p>I'm also an Instructional Aide (IA) for <a href="https://ece.engin.umich.edu/academics/course-information/course-descriptions/eecs-203/">EECS 203: Discrete Mathematics</a> at UM.</p>
+
+<p>In early 2023, I was a student researcher <!-- in mathematics --> with the <a href="https://lsa.umich.edu/math/undergraduates/research-and-career-opportunities/LoGM.html">Lab of Geometry at Michigan, LoG(M)</a>, <!-- where I studied the simulation of fractional Brownian motions --> under the mentorship of Dr. Hai Le. I was a 2022 Software Engineer Intern at Facebook (now Meta), working on user data protections with the AI Security team. Prior to that, I was a Software Engineering Research Intern at Carnegie Mellon University's <a href="https://s3d.cmu.edu/">Software and Societal Systems Department (S3D) </a>, through the NSF-sponsored <a href="https://www.cmu.edu/scs/s3d/reuse/">REUSE program</a>. While there, I conducted research on how to generate control logic from formal specifications of <!-- safety-critical --> cyber-physical systems, advised by <a href="https://www.cylab.cmu.edu/directory/bios/kang-eunsuk.html">Eunsuk Kang</a>.</p>
+
+<p><b><i>I am applying to Computer Science PhD programs starting in Fall 2024!</i></b></p>
 
 <br>
 <br>
@@ -30,10 +36,8 @@ University of Michigan<br />
 
 <h2>Research Interests</h2>
 
-<p><b><i>Currently, I am applying to Computer Science PhD programs starting in Fall 2024!</i></b></p>
 
-
-<p>I plan to conduct research that improves real-world software by finding creative new ways to leverage the mathematical foundations of computer science. I'm particularly interested in the potential to combine Data-Driven and Formal Methods-based strategies, such as in the areas of Automated Program Synthesis, Analysis, Repair, Testing, and Verification.</p>
+<p>I plan to conduct research that improves real-world software by finding creative new ways to leverage the mathematical foundations of computer science. I'm particularly interested in the potential to combine <b>data-driven</b> and <b>formal methods</b>-based strategies, such as in the areas of Automated Program Synthesis, Analysis, Repair, Testing, and Verification.</p>
 
 <hr>
 
