--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ University of Michigan<br />
 <h2>Research Interests</h2>
 
 
-<p>I plan to conduct research that improves real-world software by finding creative new ways to leverage the mathematical foundations of computer science. I'm particularly interested in the potential to combine <b>data-driven</b> and <b>formal methods</b>-based strategies, such as in the areas of Automated Program Synthesis, <!-- Analysis -->, Repair, Testing, and Verification.</p>
+<p>I plan to conduct research that improves real-world software by finding creative new ways to leverage the mathematical foundations of computer science. I'm particularly interested in the potential to combine <b>data-driven</b> and <b>formal methods</b>-based strategies, such as in the areas of Automated Program Synthesis, <!-- Analysis, --> Repair, Testing, and Verification.</p>
 
 <hr>
 
