--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@ University of Michigan<br />
 
 <ol>
     <li class="publication">
-      <p>Ahmad, H., Endres, M., Newman, K., Santiesteban, P., <b>Shedden, E.</b>, & Weimer, W. (2024). Causal Relationships and Programming Outcomes: A Transcranial Magnetic Stimulation Experiment. Accepted to Proceedings of the 46th International Conference on Software Engineering (ICSE).</p>
+      <p>Hammad Ahmad, Madeleine Endres, Kaia Newman, Priscila Santiesteban, <b>Emma Shedden</b>, & Westley Weimer. <br />
+      <a href="https://conf.researchr.org/details/icse-2024/icse-2024-research-track/94/Causal-Relationships-and-Programming-Outcomes-A-Transcranial-Magnetic-Stimulation-Ex">Causal Relationships and Programming Outcomes: A Transcranial Magnetic Stimulation Experiment</a>. <br />
+      Accepted to <i>Proceedings of the 46th International Conference on Software Engineering (ICSE)</i> 2024. [<a href="https://drive.google.com/file/d/12v4GiFFs8XkBfeqKeAqeby79AckfC_Ci/view?usp=sharing">pdf</a>]</p>
     </li>
     <li class="publication">
-      <p>Chu, S., <b>Shedden, E.</b>, Zhang, C., Meira-Góes, R., Moreno, G. A., Garlan, D., & Kang, E. (2023). Runtime Resolution of Feature Interactions through Adaptive Requirement Weakening. In Proceedings of the 18th Symposium on Software Engineering for Adaptive and Self-Managing Systems, ser. SEAMS (Vol. 23). <a href="https://doi.org/10.1109/SEAMS59076.2023.00025">https://doi.org/10.1109/SEAMS59076.2023.00025</a></p>
+      <p>Simon Chu, <b>Emma Shedden</b>, Changjian Zhang, Rômulo Meira-Góes, Gabriel A. Moreno, David Garlan, & Eunsuk Kang. <br />
+      <a href="https://conf.researchr.org/details/seams-2023/seams-2023-research-track/19/Runtime-Resolution-of-Feature-Interactions-through-Adaptive-Requirement-Weakening">Runtime Resolution of Feature Interactions through Adaptive Requirement Weakening</a>. <br />
+      In <i>Proceedings of the 18th Symposium on Software Engineering for Adaptive and Self-Managing Systems (SEAMS)</i> 2023. [<a href="https://doi.org/10.1109/SEAMS59076.2023.00025">doi</a>]</p>
     </li>
 </ol>
 
@@ -96,7 +100,7 @@ University of Michigan<br />
     <p>Jun 2021 - May 2022</p>
     <ul>
       <li>
-        Participated in the <a href="https://www.cmu.edu/scs/s3d/reuse/">National Science Foundation sponsored Research Experience for Undergraduates in Software Engineering</a> (REU-SE) hosted by the Institute for Software Research (ISR/S3D) as a full-time summer researcher; continued part-time through the 2021-22 academic year
+        Participated in the <a href="https://www.cmu.edu/scs/s3d/reuse/">National Science Foundation sponsored Research Experience for Undergraduates in Software Engineering</a> (REUSE) hosted by the Institute for Software Research (ISR/S3D) as a full-time summer researcher; continued part-time through the 2021-22 academic year
       </li>
       <li>
         Collaborated on the design of a novel reconciliation framework to resolve feature conflicts in cyber-physical systems using formal methods and Mixed Integer Linear Programming (MILP), <a href="https://doi.org/10.1109/SEAMS59076.2023.00025">published in SEAMS 2023</a>
