publication link colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p class="author">
 Undergraduate Researcher and University Student <br />
-Computer Science<br />
+Computer Science & Mathematics<br />
 College of Engineering<br />
 University of Michigan<br />
 </p>
