--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ University of Michigan<br />
 <h2>Research Interests</h2>
 
 
-<p>I plan to conduct research that improves real-world software by finding creative new ways to leverage the mathematical foundations of computer science. I'm particularly interested in <b>formal methods</b> and the potential to combine them with data-driven strategies, such as in the areas of Automated Program Synthesis, <!-- Analysis, --> Repair, Testing, and Verification.</p>
+<p>I plan to conduct research that improves real-world software by finding creative new ways to leverage the mathematical foundations of computer science. I'm particularly interested in <b>formal methods</b> and their potential when combined with data-driven strategies, such as in the areas of Automated Program Synthesis, <!-- Analysis, --> Repair, Testing, and Verification.</p>
 
 <hr>
 
