--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@ University of Michigan<br />
     <p>Sep 2022 - Present</p>
     <ul>
       <li>
-        Proposed and implemented a blinded data analysis using multilevel linear regression on psychometric data from a 15-participant human study, accepted to <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>
+        <a href="https://drive.google.com/file/d/198uSOVHTnqtihH4aU-euBOMvwGT2A1ie/view?usp=sharing">Proposed and implemented</a> a blinded data analysis using multilevel linear regression on psychometric data from a 15-participant human study, <a href="https://conf.researchr.org/home/icse-2024">accepted to ICSE 2024</a>
       </li>
       <li>
         Assisted in participant recruitment, transcranial magnetic stimulation (TMS), and fMRI sessions
       </li>
       <li>
-        Made available a complete open-source code artifact for replication of our work
+        Made available a complete <a href="https://github.com/EmmaShedden/wrg-tms/tree/dev/ICSE2024-camera-ready">open-source code artifact</a> for replication of our work
       </li>
       <li>
         Designed the coding scheme for a mixed-methods study of online peer tutoring transcripts from nontraditional computer science student interactions during the COVID-19 pandemic
@@ -90,7 +90,7 @@ University of Michigan<br />
         Participated in the Lab of Geometry at Michigan under <a href="https://lsa.umich.edu/math/people/postdoc-faculty/hvl.html">Dr. Hai Le</a>, on a team with 2 other undergraduate students
       </li>
       <li>
-        Implemented 4 competing algorithms for simulation of standard and fractional Brownian motions, and analyzed their theoretical and observed efficiencies and accuracies
+        <a href="https://github.com/EmmaShedden/logm-fractional-brownian-motion">Implemented</a> 4 competing algorithms for simulation of standard and fractional Brownian motions, and analyzed their theoretical and observed efficiencies and accuracies
       </li>
     </ul>
   </div>
